--- a/jest.config.json
+++ b/jest.config.json
@@ -1,3 +1,6 @@
 {
-  "testRegex": "((\\.|/*.)(spec))\\.js?$"
+  "testRegex": "((\\.|/*.)(spec|integration))\\.js?$",
+  "testEnvironment": "node",
+  "setupFilesAfterEnv": ["./setupTests.js"],
+  "verbose": true
 }
