--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "Node.js backend code test",
   "author": "Jul Balgue",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "private": true,
   "keywords": [
     "nodejs",
     "test"
   ],
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "nodemon --exec babel-node src/server.js",
     "test": "jest --config ./jest.config.json"
   },
   "devDependencies": {
@@ -19,11 +19,15 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
+    "babel-jest": "^26.2.2",
+    "babel-polyfill": "^6.26.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^26.2.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "regenerator-runtime": "^0.13.7",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "adm-zip": "^0.4.16",
@@ -31,8 +35,5 @@
     "node-cron": "^2.0.3",
     "restify": "^8.5.1",
     "restify-errors": "^8.0.2"
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
